--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,6 +29,7 @@
 
 <main>
     <section class="content">
+        <section class="card">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization photo" class="float-left" />
             <h2 class="head">Search Engine Optimization</h2>
@@ -36,6 +37,8 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
+        </section>
+        <section class="card">
         <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="online reputation management"class="float-right" />
             <h2 class="head">Online Reputation Management</h2>
@@ -43,12 +46,15 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
+        </section>
+        <section class="card">
         <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing" class="float-left" />
             <h2 class="head">Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
+        </section>
         </section>
     </section>
     <aside class="benefits">
